--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,72 @@
     <link rel="stylesheet" href="/screen.css" />
   </head>
   <body>
-    <h1 class="hello-world">Hello, World!</h1>
+    <header>
+      <ul class="leftside">
+        <li>
+          <img src="./icon.png" alt="" />
+        </li>
+        <li class="octo"><a href="">Octodex</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="">FAQ</a></li>
+      </ul>
+      <ul class="rightside">
+        <li><a href="">Follow us on Twittwer</a></li>
+        <li><a href="">Back to GitHub.com</a></li>
+      </ul>
+    </header>
+    <section class="octocats">
+      <ul>
+        <li>
+          <img src="./octocat1.png" alt="" />
+          <p>#149: Terracottocat</p>
+        </li>
+        <li>
+          <img src="./octocat2.jpg" alt="" />
+          <p>#137: Vinyltocat</p>
+        </li>
+        <li>
+          <img src="./octocat3.png" alt="" />
+          <p>#130: Dinotocat</p>
+        </li>
+        <li>
+          <img src="./octocat4.jpg" alt="" />
+          <p>#127: McEfeeline</p>
+        </li>
+        <li>
+          <img src="./octocat1.png" alt="" />
+          <p>#149: Terracottocat</p>
+        </li>
+        <li>
+          <img src="./octocat2.jpg" alt="" />
+          <p>#137: Vinyltocat</p>
+        </li>
+        <li>
+          <img src="./octocat3.png" alt="" />
+          <p>#130: Dinotocat</p>
+        </li>
+        <li>
+          <img src="./octocat4.jpg" alt="" />
+          <p>#127: McEfeeline</p>
+        </li>
+        <li>
+          <img src="./octocat1.png" alt="" />
+          <p>#149: Terracottocat</p>
+        </li>
+        <li>
+          <img src="./octocat2.jpg" alt="" />
+          <p>#137: Vinyltocat</p>
+        </li>
+        <li>
+          <img src="./octocat3.png" alt="" />
+          <p>#130: Dinotocat</p>
+        </li>
+        <li>
+          <img src="./octocat4.jpg" alt="" />
+          <p>#127: McEfeeline</p>
+        </li>
+      </ul>
+    </section>
+    <footer>© 2013 – 2020 GitHub, Inc. All rights reserved.</footer>
   </body>
 </html>
